--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,12 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+# Input
+/INPUT/
+
+# Output
+/OUTPUT/
+
+# Markdown files
+/COMMUNICATION/
